--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.0.4",
